--- a/src/style.css
+++ b/src/style.css
@@ -297,13 +297,16 @@ body {
 	position: absolute;
 	right: 0;
 	left: 0;
+	
 }
 
 .filters li {
 	display: inline;
+	
 }
 
 .filters li a {
+	
 	color: inherit;
 	margin: 3px;
 	padding: 3px 7px;
@@ -322,11 +325,13 @@ body {
 
 .clear-completed,
 html .clear-completed:active {
+	border: 1px solid red;
 	float: right;
 	position: relative;
 	line-height: 20px;
 	text-decoration: none;
 	cursor: pointer;
+	display: block;
 }
 
 .clear-completed:hover {
